I finished header section

--- a/index.html
+++ b/index.html
@@ -8,10 +8,46 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css"> 
-    <title>Document</title>
+    <title>Pixer</title>
 </head>
 <body>
-    
+    <header class="site-header">
+    	<div class="container">
+    		<a href="#" class="site-logo-link">
+    			<img src="img/logo.svg" alt="logo" width="58" height="20">
+    		</a>
+    		<nav class="site-nav">
+    			<ul class="site-nav-list">
+    				<li class="site-nav-item">
+    					<a href="#">Bosh sahifa</a>
+    					<ul class="site-header-drop-down">
+    						<li class="drop-down-item"><a href="#">Vebsayt</a></li>
+    						<li class="drop-down-item"><a href="#">Telegram bot</a></li>
+    						<li class="drop-down-item"><a href="#">SMM</a></li>
+    						<li class="drop-down-item"><a href="#">Grafik dizayn</a></li>
+    						<li class="drop-down-item"><a href="#">CRM tizim</a></li>
+    					</ul>
+    				</li>
+    				<li class="site-nav-item">
+    					<a href="#">Xizmatlar</a>
+    				</li>
+    				<li class="site-nav-item">
+    					<a href="#">Portfolio</a>
+    				</li>
+    				<li class="site-nav-item">
+    					<a href="#">Jamoa</a>
+    				</li>
+    				<li class="site-nav-item">
+    					<a href="#">Blog</a>
+    				</li>
+    				<li class="site-nav-item">
+    					<a href="#">Kontaktlar</a>
+    				</li>
+    			</ul>
+    		</nav>
+    		<a class="tel-link" href="tel:+998909213711">+998 90 921 37 11</a>
+    	</div>
+    </header>
 </body>
 </html>
  
